finish BE, configuring FE